fixed mobile menu events

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul class="mobile-nav__items">
 
                 <li class="mobile-nav__item">
-                    <a href="">Product <img src="./images/icon-arrow-dark.svg" alt=""></a>
-                    <ul class="mobile-nav__sub-items">
+                    <a class="mobile-sub-menu__btn prod-btn" href="#">Product <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <ul class="mobile-nav__sub-items prod-menu">
                         <li><a href="">Overview</a></li>
                         <li><a href="">Pricing</a></li>
                         <li><a href="">Marketplace</a></li>
@@ -26,8 +26,8 @@
                 </li>
 
                 <li class="mobile-nav__item">
-                    <a href="">Company <img src="./images/icon-arrow-dark.svg" alt=""></a>
-                    <ul class="mobile-nav__sub-items">
+                    <a class="mobile-sub-menu__btn comp-btn" href="#">Company <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <ul class="mobile-nav__sub-items comp-menu">
                         <li><a href="">About</a></li>
                         <li><a href="">Team</a></li>
                         <li><a href="">Blog</a></li>
@@ -36,8 +36,8 @@
                 </li>
 
                 <li class="mobile-nav__item">
-                    <a href="">Connect <img src="./images/icon-arrow-dark.svg" alt=""></a>
-                    <ul class="mobile-nav__sub-items">
+                    <a class="mobile-sub-menu__btn" href="#">Connect <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <ul class="mobile-nav__sub-items connect-menu">
                         <li><a href="">Contact</a></li>
                         <li><a href="">Newsletter</a></li>
                         <li><a href="">Linkedin</a></li>
@@ -46,8 +46,8 @@
             </ul>
 
             <div class="menu-wrapper">
-                <a class="menu-wrapper__login" href="">Login</a>
-                <a class="menu-wrapper__signUp" href="">Sign Up</a>
+                <a class="menu-wrapper__login" href="#">Login</a>
+                <a class="menu-wrapper__signUp" href="#">Sign Up</a>
             </div>
     </nav>
 
