--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
 
                 <li class="mobile-nav__item">
-                    <a class="mobile-sub-menu__btn" href="#">Connect <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <a class="mobile-sub-menu__btn conn-btn" href="#">Connect <img src="./images/icon-arrow-dark.svg" alt=""></a>
                     <ul class="mobile-nav__sub-items connect-menu">
                         <li><a href="">Contact</a></li>
                         <li><a href="">Newsletter</a></li>
