added styles to sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="mobile-nav__items">
 
                 <li class="mobile-nav__item">
-                    <a class="mobile-sub-menu__btn prod-btn" href="#">Product <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <a class="mobile-sub-menu__btn prod-btn" href="#0">Product <img src="./images/icon-arrow-dark.svg" alt=""></a>
                     <ul class="mobile-nav__sub-items prod-menu">
                         <li><a href="">Overview</a></li>
                         <li><a href="">Pricing</a></li>
@@ -26,7 +26,7 @@
                 </li>
 
                 <li class="mobile-nav__item">
-                    <a class="mobile-sub-menu__btn comp-btn" href="#">Company <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <a class="mobile-sub-menu__btn comp-btn" href="#0">Company <img src="./images/icon-arrow-dark.svg" alt=""></a>
                     <ul class="mobile-nav__sub-items comp-menu">
                         <li><a href="">About</a></li>
                         <li><a href="">Team</a></li>
@@ -36,7 +36,7 @@
                 </li>
 
                 <li class="mobile-nav__item">
-                    <a class="mobile-sub-menu__btn" href="#">Connect <img src="./images/icon-arrow-dark.svg" alt=""></a>
+                    <a class="mobile-sub-menu__btn" href="#0">Connect <img src="./images/icon-arrow-dark.svg" alt=""></a>
                     <ul class="mobile-nav__sub-items connect-menu">
                         <li><a href="">Contact</a></li>
                         <li><a href="">Newsletter</a></li>
@@ -74,28 +74,28 @@
                     <img class="editor-desktop" src="./images/illustration-editor-desktop.svg" alt="">
                 </figure>
                 <article class="feature__textblock intro">
-                    <h2>Introducing an extensible editor</h2>
-                    <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.
+                    <h2 class="feature__heading">Introducing an extensible editor</h2>
+                    <p class="feature__paragraph">Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or change the looks of a blog.
                     </p>
                 </article>
                 <article class="feature__textblock robust">
-                    <h2>Robust content management</h2>
-                    <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+                    <h2 class="feature__heading">Robust content management</h2>
+                    <p class="feature__paragraph">Flexible content management enables users to easily move through posts. Increase the usability of your blog by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
                     </p>
                 </article>
             </section>
             <section class="state-of-art">
-                <figure class="phones-wrapper">
-                    <img src="" alt="" class="phones">
+                <figure class="state-of-art__phones-wrapper">
+                    <img src="./images/illustration-phones.svg" alt="" class="phones">
                 </figure>
                 <article class="state-of-art__content">
-                    <h2>State of the Art Infrastructure</h2>
-                    <p>
-                        With reliability and speed in mind, worldwide data centers provide the
-                        backbone for ultra-fast connectivity. This ensures your site will load
-                        instantly, no matter where your readers are, keeping your site
-                        competitive.
-                      </p>
+                    <h2 class="feature__heading infrastructure">State of the Art Infrastructure</h2>
+                        <p class="feature__paragraph">
+                            With reliability and speed in mind, worldwide data centers provide the
+                            backbone for ultra-fast connectivity. This ensures your site will load
+                            instantly, no matter where your readers are, keeping your site
+                            competitive.
+                        </p>
                 </article>
                 <section class="feature">
                     <figure class="feature__img-wrapper">
@@ -103,15 +103,15 @@
                         <img class="editor-desktop" src="./images/illustration-laptop-desktop.svg" alt="">
                     </figure>
                     <article class="feature__textblock intro">
-                        <h2>Free, open, simple
+                        <h2 class="feature__heading">Free, open, simple
                         </h2>
-                        <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting,tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+                        <p class="feature__paragraph">Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting,tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
                         </p>
                     </article>
                     <article class="feature__textblock robust">
-                        <h2>Powerful tooling
+                        <h2 class="feature__heading">Powerful tooling
                         </h2>
-                        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.
+                        <p class="feature__paragraph">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.
                         </p>
                     </article>
                 </section>
