added styles for footer and header responsiveness fixes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     </ul>
                 </li>
             </ul>
-
             <div class="menu-wrapper">
                 <a class="menu-wrapper__login" href="#">Login</a>
                 <a class="menu-wrapper__signUp" href="#">Sign Up</a>
@@ -97,36 +96,36 @@
                             competitive.
                         </p>
                 </article>
-                <section class="feature">
-                    <figure class="feature__img-wrapper">
-                        <img class="editor" src="./images/illustration-laptop-mobile.svg" alt="">
-                        <img class="editor-desktop" src="./images/illustration-laptop-desktop.svg" alt="">
-                    </figure>
-                    <article class="feature__textblock intro">
-                        <h2 class="feature__heading">Free, open, simple
-                        </h2>
-                        <p class="feature__paragraph">Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting,tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-                        </p>
-                    </article>
-                    <article class="feature__textblock robust">
-                        <h2 class="feature__heading">Powerful tooling
-                        </h2>
-                        <p class="feature__paragraph">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.
-                        </p>
-                    </article>
-                </section>
             </section> 
+            <section class="feature free">
+                <figure class="feature__img-wrapper">
+                    <img class="editor" src="./images/illustration-laptop-mobile.svg" alt="">
+                    <img class="editor-desktop" src="./images/illustration-laptop-desktop.svg" alt="">
+                </figure>
+                <article class="feature__textblock intro">
+                    <h2 class="feature__heading">Free, open, simple
+                    </h2>
+                    <p class="feature__paragraph">Blogr is a free and open source application backed by a large community of helpful developers. It supports features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting,tools, and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+                    </p>
+                </article>
+                <article class="feature__textblock robust">
+                    <h2 class="feature__heading">Powerful tooling
+                    </h2>
+                    <p class="feature__paragraph">Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but capable of producing even the most complicated sites.
+                    </p>
+                </article>
+            </section>
            
         </main>
 
         
         <footer class="footer">
-            <a class="footer__logo" href=""><img src="./images/logo.svg" alt="Blogr Logo"></a>
+            <a class="footer__logo" href="#0"><img src="./images/logo.svg" alt="Blogr Logo"></a>
             <nav class="footer__nav">
-                <ul>
-                    <li>
-                        <a href="">Product</a>
-                        <ul>
+                <ul class="footer__list">
+                    <li class="main-list__element">
+                        <a class="footer__main-title" href="">Product</a>
+                        <ul class="footer__lists">
                             <li><a href="">Overview</a></li>
                             <li><a href="">Pricing</a></li>
                             <li><a href="">Marketplace</a></li>
@@ -134,18 +133,18 @@
                             <li><a href="">Integrations</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="">Company</a>
-                        <ul>
+                    <li class="main-list__element">
+                        <a class="footer__main-title" href="">Company</a>
+                        <ul class="footer__lists">
                             <li><a href="">About</a></li>
                             <li><a href="">Team</a></li>
                             <li><a href="">Blog</a></li>
                             <li><a href="">Careers</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="">Connect</a>
-                        <ul>
+                    <li class="main-list__element">
+                        <a class="footer__main-title" href="">Connect</a>
+                        <ul class="footer__lists">
                             <li><a href="">Contact</a></li>
                             <li><a href="">Newsletter</a></li>
                             <li><a href="">Linkedin</a></li>
