--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </article>
             </section> 
             <section class="feature free">
-                <figure class="feature__img-wrapper">
+                <figure class="feature__img-wrapper free">
                     <img class="editor" src="./images/illustration-laptop-mobile.svg" alt="">
                     <img class="editor-desktop" src="./images/illustration-laptop-desktop.svg" alt="">
                 </figure>
