--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
                     </li>
                 </ul>
             </nav>
+            <div class="attribution">
+                Challenge by
+                <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Maciej Pawłowski</a>.
+              </div>
         </footer>
    </div>
     <script src="app/menu.js"></script>
