gsap animations test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/favicon-32x32.png" type="image/png">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <title>Blog Landing Page</title>
 </head>
 <body>
@@ -203,5 +205,6 @@
         </footer>
    </div>
     <script src="app/menu.js"></script>
+    <script src="app/animations.js"></script>  
 </body>
 </html>
